<resources>
    <string name="app_name">JustRun</string>
    <string-array name="screen_array">
        <item>Screen 1</item>
        <item>Screen 2</item>
        <item>Screen 3</item>
    </string-array>
    <string name="left_tab_text">Map</string>
    <string name="right_tab_text">Trainer</string>

    <string name="menu_element_text">Trainer</string>
    <string name="test1">Test1</string>
    <string name="test2">Test2</string>

    <string name="basic_mode">Basic</string>
    <string name="distance_mode">Distance</string>
    <string name="time_mode">By Time</string>
    <string name="speed_mode">Speed</string>
    <string name="advanced_mode">Advanced</string>
    <string name="start_btn_txt">START</string>
    <string name="distance">Training distance</string>
    <string name="distanceSuffixKM">KM</string>
    <string name="OK">OK</string>
    <string name="CANCELL">CANCELL</string>


</resources>
