<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.hgsft.justrun.LeftTab">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:elevation="10dp"
        android:theme="?attr/actionBarTheme">

        <Button
            android:id="@+id/basicMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="10dp"
            android:text="@string/basic_mode" />
        <Button
            android:id="@+id/distanceMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_mode" />
        <Button
            android:id="@+id/timeMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_mode" />
        <Button
            android:id="@+id/speedMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_mode" />
        <Button
            android:id="@+id/advancedMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced_mode" />

    </android.support.v7.widget.Toolbar>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/startTrainingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundshapebtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:text="START" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/musicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:layout_marginLeft="130dp"
        android:layout_alignLeft="@+id/startTrainingButton"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_media_play" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:layout_marginRight="130dp"
        android:layout_alignRight="@+id/startTrainingButton"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_manage" />



</RelativeLayout>